# Copyright 2026 Octave Online LLC
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#    http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

[package]
name = "cg2tools"
description = "CLI for delegated unified control groups (cgroups v2)"
version = "0.0.2"
edition = "2021"
rust-version = "1.75"
license = "Apache-2.0"
keywords = ["cgroup", "cgroups", "systemd", "cgexec", "libcgroup"]

[dependencies]
clap = { version = "4.5.54", features = ["derive"] }
clap_lex = "0.7"

[dev-dependencies]
insta = "1"
shlex = "1"

[[bin]]
name = "cg2exec"
path = "src/bin/cg2exec.rs"

[[bin]]
name = "cg2util"
path = "src/bin/cg2util.rs"
